// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A show loads correctly with a gallery 1`] = `
<Layout>
  <Seo
    description="<p>All the acting</p>"
    image="https://example.com/wide.png"
    keywords={
      Array [
        "czech",
        "theater",
        "show",
      ]
    }
    title="Alquist's revenge"
  />
  <h1>
    Alquist's revenge
  </h1>
  <Memo(ImageElement)
    alt="A great image"
    backgroundColor="rgba(255,255,255,1)"
    height={501}
    image={
      Object {
        "description": "A great image",
        "url": "https://example.com/wide.png",
      }
    }
    layout="constrained"
    placeholder="blurred"
  />
  <RichTextElement
    className="showDescription"
    resolveLink={[Function]}
    value="<p>All the acting in a longer way.</p>"
  />
  <h4
    className="tickets"
  >
    <a
      href="https://example.com"
    >
      Tickets
    </a>
  </h4>
  <Gallery
    images={
      Array [
        Object {
          "description": "A great image",
          "url": "https://example.com/wide.png",
        },
      ]
    }
  />
</Layout>
`;

exports[`A show loads correctly with no gallery 1`] = `
<Layout>
  <Seo
    description="<p>All the acting</p>"
    image="https://example.com/wide.png"
    keywords={
      Array [
        "czech",
        "theater",
        "show",
      ]
    }
    title="Alquist's revenge"
  />
  <h1>
    Alquist's revenge
  </h1>
  <Memo(ImageElement)
    alt="A great image"
    backgroundColor="rgba(255,255,255,1)"
    height={501}
    image={
      Object {
        "description": "A great image",
        "url": "https://example.com/wide.png",
      }
    }
    layout="constrained"
    placeholder="blurred"
  />
  <RichTextElement
    className="showDescription"
    resolveLink={[Function]}
    value="<p>All the acting in a longer way.</p>"
  />
  <h4
    className="tickets"
  >
    <a
      href="https://example.com"
    >
      Tickets
    </a>
  </h4>
</Layout>
`;

exports[`A show loads correctly with no tickets 1`] = `
<Layout>
  <Seo
    description="<p>All the acting</p>"
    image="https://example.com/wide.png"
    keywords={
      Array [
        "czech",
        "theater",
        "show",
      ]
    }
    title="Alquist's revenge"
  />
  <h1>
    Alquist's revenge
  </h1>
  <Memo(ImageElement)
    alt="A great image"
    backgroundColor="rgba(255,255,255,1)"
    height={501}
    image={
      Object {
        "description": "A great image",
        "url": "https://example.com/wide.png",
      }
    }
    layout="constrained"
    placeholder="blurred"
  />
  <RichTextElement
    className="showDescription"
    resolveLink={[Function]}
    value="<p>All the acting in a longer way.</p>"
  />
  <Gallery
    images={
      Array [
        Object {
          "description": "A great image",
          "url": "https://example.com/wide.png",
        },
      ]
    }
  />
</Layout>
`;
